--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.1
+  provider: ^5.0.0
+  path: ^1.8.0
+  sqflite: ^2.0.0+3
 
 
   # The following adds the Cupertino Icons font to your application.
